conf/iptables.rules
# Generated by iptables-save v1.6.0 on Fri May 10 14:10:00 2019
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:PSAD_BLOCK_FORWARD - [0:0]
:PSAD_BLOCK_INPUT - [0:0]
:PSAD_BLOCK_OUTPUT - [0:0]
-A INPUT -j PSAD_BLOCK_INPUT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 50404 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -j LOG
-A INPUT -j DROP
-A FORWARD -j PSAD_BLOCK_FORWARD
-A FORWARD -j LOG
-A OUTPUT -j PSAD_BLOCK_OUTPUT
COMMIT
# Completed on Fri May 10 14:10:00 2019
# Generated by iptables-save v1.6.0 on Fri May 10 14:10:00 2019
*nat
:PREROUTING ACCEPT [1650:132952]
:INPUT ACCEPT [3:192]
:OUTPUT ACCEPT [73:4316]
:POSTROUTING ACCEPT [73:4316]
COMMIT
# Completed on Fri May 10 14:10:00 2019
# Generated by iptables-save v1.6.0 on Fri May 10 14:10:00 2019
*mangle
:PREROUTING ACCEPT [4250:604191]
:INPUT ACCEPT [2820:478700]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1635:206811]
:POSTROUTING ACCEPT [1635:206811]
COMMIT
# Completed on Fri May 10 14:10:00 2019
